# np_assignment2

./: CMakeLists.txt  Makefile  a.out  calcLib.c  calcLib.h  client  clientmain  clientmain.cpp  main.cpp  protocol.h  server  serverD  servermain.c  servermain.cpp  test
